<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.flagcolor.FlagActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/changa_one"
        android:gravity="center"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />


    <CheckBox
        android:id="@+id/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/white"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <CheckBox
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/yellow"
        app:layout_constraintStart_toStartOf="@+id/white"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <CheckBox
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/orange"
        app:layout_constraintStart_toStartOf="@+id/yellow"
        app:layout_constraintTop_toBottomOf="@+id/yellow" />

    <CheckBox
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/green"
        app:layout_constraintStart_toStartOf="@+id/orange"
        app:layout_constraintTop_toBottomOf="@+id/orange" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/submit2"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />



</androidx.constraintlayout.widget.ConstraintLayout>